# PurpleTube

./: .gitignore  package-lock.json  pyproject.toml
backend/: main.py  pyproject.toml
backend/api/: comentario.py  filme.py  main.py  users.py
backend/api/db/: database.py
backend/api/db/models/: actor.py  avaliation.py  category.py  comment.py  direction.py  diretor.py  like.py  movie.py  movie_category.py  role.py  user.py
backend/api/db/queries/: db_actor.py  db_avaliation.py  db_category.py  db_comment.py  db_director.py  db_like.py  db_movie.py  db_user.py
backend/api/routes/: actor.py  avaliation.py  category.py  comment.py  director.py  like.py  movie.py  user.py
backend/api/schemas/: actor.py  avaliation.py  category.py  comment.py  director.py  like.py  movie.py  user.py
backend/db/: db_setup.py
backend/db/models/: comentario.py  filme.py  user.py
frontend/purpletube/: package-lock.json  package.json
frontend/purpletube/public/: index.html
frontend/purpletube/src/: App.js
frontend/purpletube/src/components/Category/: index.js  style.css
frontend/purpletube/src/components/DisplayComment/: index.js  style.css
frontend/purpletube/src/components/Movie/: index.js  style.css
frontend/purpletube/src/components/SendComment/: index.js  style.css
frontend/purpletube/src/services/: api.js
purpletube/: main.py
purpletube/db/: database.py  db_movie.py  models.py
purpletube/db/models/: comment.py  user.py
purpletube/db/queries/: db_comment.py  db_movie.py  db_user.py
purpletube/routers/: movie.py
purpletube/routes/: comment.py  movie.py  schemas.py  user.py
purpletube/schemas/: comment.py  user.py
tests/: test_purpletube.py
(+11 files in other folders)
