[tool.poetry]
name = "purpletube"
version = "0.1.0"
description = ""
authors = ["Joelder Aguiar <joelderaguiar@eng.ci.ufpb.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "purpletube.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
