[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Yvson Nunes <yvsonnunes7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "api.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
