[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yvson Nunes <yvsonnunes7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
